--- a/workspace/SiYuan/data/widgets/publisher/index.html
+++ b/workspace/SiYuan/data/widgets/publisher/index.html
@@ -1,7 +1,1 @@
-hello
-
-<script>
-    window.onload = function () {
-      console.log(parent.window);
-    };
-</script>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>publisher</title><script defer="defer" src="js/chunk-vendors.37d92251.js"></script><script defer="defer" src="js/app.554603f0.js"></script><link href="css/app.2cf79ad6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but publisher doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
