--- a/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
+++ b/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
-    <script type="module" crossorigin src="/assets/index.355a229a.js"></script>
-    <link rel="stylesheet" href="/assets/index.35e49caf.css">
+    <title>sy-post-publisher</title>
+    <script type="module" crossorigin src="./assets/index.ef50737d.js"></script>
+    <link rel="stylesheet" href="./assets/index.4c038c30.css">
   </head>
   <body>
     <div id="app"></div>
