--- a/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
+++ b/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sy-post-publisher</title>
-    <script type="module" crossorigin src="./assets/index.417b6e4e.js"></script>
-    <link rel="stylesheet" href="./assets/index.0816d321.css">
+    <script type="module" crossorigin src="./assets/index.e6fbfbdf.js"></script>
+    <link rel="stylesheet" href="./assets/index.ecc83388.css">
   </head>
   <body>
     <div id="app"></div>
+    <script src="./lute.min.js"></script>
     
   </body>
 </html>
