:art: 备份本地笔记

--- a/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
+++ b/workspace/SiYuan/data/widgets/sy-post-publisher/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon" href="../../favicon.ico">
+    <link rel="shortcut icon" href="/widgets/sy-post-publisher/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>多平台文章发布-思源笔记发布辅助工具</title>
-  <script type="module" crossorigin src="../../static/js/-39fb5f7a.js"></script>
-  <link rel="modulepreload" crossorigin href="../../static/js/footer-024d6c20.js">
-  <link rel="modulepreload" crossorigin href="../../static/js/PublishService.vue_vue_type_script_setup_true_lang-4b6bcca2.js">
-  <link rel="modulepreload" crossorigin href="../../static/js/DefaultPostDetailService.vue_vue_type_style_index_0_lang-ead50190.js">
-  <link rel="modulepreload" crossorigin href="../../static/js/BlogIndex.vue_vue_type_script_setup_true_lang-fc9f7ab8.js">
-  <link rel="stylesheet" href="../../static/css/footer-64db0104.css">
-  <link rel="stylesheet" href="../../static/css/PublishService-708df382.css">
-  <link rel="stylesheet" href="../../static/css/DefaultPostDetailService-c720eb2a.css">
-  <link rel="stylesheet" href="../../static/css/BlogIndex-6b67a205.css">
+  <script type="module" crossorigin src="/widgets/sy-post-publisher/static/js/-fe60f77d.js"></script>
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/footer-d815302d.js">
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/PublishService.vue_vue_type_script_setup_true_lang-035e1a8d.js">
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/DefaultPostDetailService.vue_vue_type_style_index_0_lang-d4f4182b.js">
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/BlogIndex.vue_vue_type_script_setup_true_lang-207ab19d.js">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/footer-64db0104.css">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/PublishService-400ccb93.css">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/DefaultPostDetailService-c720eb2a.css">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/BlogIndex-6b67a205.css">
 </head>
 <body>
 <div id="app"></div>
-<script src="../../lute.min.js"></script>
-<script src="../../mathjaxCfg.js"></script>
-<script src="../../mathjax-3.2.2-tex-svg.js"></script>
+<script src="/widgets/sy-post-publisher/lute.min.js"></script>
+<script src="/widgets/sy-post-publisher/mathjaxCfg.js"></script>
+<script src="/widgets/sy-post-publisher/mathjax-3.2.2-tex-svg.js"></script>
 
 </body>
 </html>
