--- a/workspace/SiYuan/data/widgets/sy-post-publisher/publish/index.html
+++ b/workspace/SiYuan/data/widgets/sy-post-publisher/publish/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon" href="../../../favicon.ico">
+    <link rel="shortcut icon" href="/widgets/sy-post-publisher/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>多平台文章发布-思源笔记发布辅助工具</title>
-  <script type="module" crossorigin src="../../../static/js/publish-065ea9f5.js"></script>
-  <link rel="modulepreload" crossorigin href="../../../static/js/footer-024d6c20.js">
-  <link rel="modulepreload" crossorigin href="../../../static/js/PublishService.vue_vue_type_script_setup_true_lang-4b6bcca2.js">
-  <link rel="stylesheet" href="../../../static/css/footer-64db0104.css">
-  <link rel="stylesheet" href="../../../static/css/PublishService-708df382.css">
+  <script type="module" crossorigin src="/widgets/sy-post-publisher/static/js/publish-665ae8e6.js"></script>
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/footer-d815302d.js">
+  <link rel="modulepreload" crossorigin href="/widgets/sy-post-publisher/static/js/PublishService.vue_vue_type_script_setup_true_lang-035e1a8d.js">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/footer-64db0104.css">
+  <link rel="stylesheet" href="/widgets/sy-post-publisher/static/css/PublishService-400ccb93.css">
 </head>
 <body>
 <div id="app"></div>
-<script src="../../../lute.min.js"></script>
-<script src="../../../mathjaxCfg.js"></script>
-<script src="../../../mathjax-3.2.2-tex-svg.js"></script>
+<script src="/widgets/sy-post-publisher/lute.min.js"></script>
+<script src="/widgets/sy-post-publisher/mathjaxCfg.js"></script>
+<script src="/widgets/sy-post-publisher/mathjax-3.2.2-tex-svg.js"></script>
 
 </body>
 </html>
